# RawDev

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md
.github/workflows/: build.yml
cmake/: EnableIPO.cmake  NoInSourceBuilds.cmake
src/: ArtistNameValidator.cpp  ArtistNameValidator.hpp  CMakeLists.txt  CmdLineArgument.hpp  CmdLineParser.cpp  CmdLineParser.hpp  Color.cpp  Color.hpp  Demosaic.cpp  Demosaic.hpp  Denoise.cpp  Denoise.hpp  Exception.hpp  Logger.cpp  Logger.hpp  Main.cpp  NonCopyable.hpp  Options.cpp  Options.hpp  Output.cpp  Output.hpp  ProcRGB.cpp  ProcRGB.hpp  RawDev.cpp  RawDev.hpp  Scale.cpp  Scale.hpp  StopWatch.hpp  TimeUtils.cpp  TimeUtils.hpp  Utils.cpp  Utils.hpp  Version.hpp  WhiteBalance.cpp  WhiteBalance.hpp
src/CamProfiles/: AllCamProfiles.hpp  CFAPattern.cpp  CFAPattern.hpp  CMakeLists.txt  CamID.hpp  CamProfile.cpp  CamProfile.hpp  CamProfileHelpers.hpp
src/CamProfiles/EOS_1DX/: Cam1DX-hsv1.cpp  Cam1DX-hsv2.cpp  Cam1DX-prlook.cpp  Cam1DX.cpp  Cam1DX.hpp
src/CamProfiles/EOS_1DX2/: Cam1DX2-hsv1.cpp  Cam1DX2-hsv2.cpp  Cam1DX2-prlook.cpp  Cam1DX2.cpp  Cam1DX2.hpp
src/CamProfiles/EOS_5D/: Cam5D.cpp  Cam5D.hpp
src/CamProfiles/EOS_5D2/: Cam5D2-prlook.cpp  Cam5D2.cpp  Cam5D2.hpp  profLookMap.hpp
src/CamProfiles/EOS_5D3/: Cam5D3-hsv1.cpp  Cam5D3-hsv2.cpp  Cam5D3-prlook.cpp  Cam5D3.cpp  Cam5D3.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_5D4/: Cam5D4-hsv1.cpp  Cam5D4-hsv2.cpp  Cam5D4-prlook.cpp  Cam5D4.cpp  Cam5D4.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_5Ds/: Cam5Ds-hsv1.cpp  Cam5Ds-hsv2.cpp  Cam5Ds-prlook.cpp  Cam5Ds.cpp  Cam5Ds.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp  toneCurve.hpp
src/CamProfiles/EOS_5DsR/: Cam5DsR-hsv1.cpp  Cam5DsR-hsv2.cpp  Cam5DsR-prlook.cpp  Cam5DsR.cpp  Cam5DsR.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_6D/: Cam6D-hsv1.cpp  Cam6D-hsv2.cpp  Cam6D-prlook.cpp  Cam6D.cpp  Cam6D.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_6D2/: Cam6D2-hsv1.cpp  Cam6D2-hsv2.cpp  Cam6D2-prlook.cpp  Cam6D2.cpp  Cam6D2.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_77D/: Cam77D-hsv1.cpp  Cam77D-hsv2.cpp  Cam77D-prlook.cpp  Cam77D.cpp  Cam77D.hpp
src/CamProfiles/EOS_7D/: Cam7D-prlook.cpp  Cam7D.cpp  Cam7D.hpp  profLookMap.hpp
src/CamProfiles/EOS_7D2/: Cam7D2-hsv1.cpp  Cam7D2-hsv2.cpp  Cam7D2-prlook.cpp  Cam7D2.cpp  Cam7D2.hpp  hsvMap1.hpp  hsvMap2.hpp  profLookMap.hpp
src/CamProfiles/EOS_80D/: Cam80D-hsv1.cpp  Cam80D-hsv2.cpp  Cam80D-prlook.cpp  Cam80D.cpp  Cam80D.hpp
src/ColorProfiles/: AdobeRGB1998-icc.cpp  AdobeRGB1998-icc.hpp  ColorProfile.hpp  srgb-icc.cpp  srgb-icc.hpp
src/Demosaic/: AHD.cpp  AHD.hpp  Algorithm.hpp  AlgorithmType.hpp  Bilinear.cpp  Bilinear.hpp  Freeman.cpp  Freeman.hpp  HQLinear.cpp  HQLinear.hpp
src/ImageIO/: ByteTag.cpp  ByteTag.hpp  CR2Reader.cpp  CR2Reader.hpp  HuffTree.cpp  HuffTree.hpp  LongTag.cpp  LongTag.hpp  RationalTag.cpp  RationalTag.hpp  RawHeader.hpp  ShortTag.cpp  ShortTag.hpp  StringTag.cpp  StringTag.hpp  TagFactory.cpp  TagFactory.hpp  TiffDir.cpp  TiffDir.hpp  TiffHeader.hpp  TiffTag.hpp  TiffWriter.cpp  TiffWriter.hpp
src/Structures/: Array2D.hpp  Cache.hpp  HSVMap.cpp  HSVMap.hpp  Image.cpp  Image.hpp  LUT.hpp  Mat3x3.cpp  Mat3x3.hpp  Path.cpp  Path.hpp  Point.hpp  Rect.hpp
test/: Array2DTest.cpp  ArtistNameValidatorTest.cpp  CFAPatternTest.cpp  CMakeLists.txt  CR2ReaderTest.cpp  CamProfileTest.cpp  CmdLineTest.cpp  ColorTest.cpp  Mat3x3Test.cpp  OptionsTest.cpp  PathTest.cpp  PointTest.cpp  RectTest.cpp  StopWatchTest.cpp  UtilsTest.cpp  UtilsTestStat3.cpp  WhiteBalanceTest.cpp  pch.cpp  pch.hpp
test/data/: README.md
tools/: README.md  makemake.sh  pack.cmd  run-clang-tidy.cmd
tools/CamSupport/: Cam.cpp  Cam.hpp  README.md  genhsv.py
vsproj/: RawDev.sln  RawDevRelease.props  RawDevShared.props
vsproj/RawDev/: RawDev.vcxproj  RawDev.vcxproj.filters
vsproj/RawDevExe/: RawDevExe.vcxproj  RawDevExe.vcxproj.filters
vsproj/RawDevTest/: RawDevTest.vcxproj  RawDevTest.vcxproj.filters
